feat: 解决部分sonar扫描的警告和缺陷